--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ a{
     width: 100%;
     height: 60px;
     margin: 5px;
-    background-color: brown;
+    background-color: rgba(52, 209, 230, 0.664);
     display: flex;
     align-items: center;
 }
