--- a/style.css
+++ b/style.css
@@ -34,7 +34,8 @@ a{
 #informacoes {
     width: 85%;
     height: 100%;
-    background-color: rgba(0, 0, 255, 0.295);
+    background-image: url(fundo.jpg);
+    background-size: contain  ;
     overflow-x: hidden;
     display: flex;
     flex-direction: column;
@@ -45,7 +46,7 @@ a{
     width: 100%;
     height: 60px;
     margin: 5px;
-    background-color: rgba(52, 209, 230, 0.664);
+    background-color: rgba(0, 118, 253, 0.664);
     display: flex;
     align-items: center;
 }
