--- a/styles/style.css
+++ b/styles/style.css
@@ -46,7 +46,7 @@ a{
     width: 100%;
     height: 60px;
     margin: 5px;
-    background-color: rgba(76, 0, 253, 0.322);
+    background: linear-gradient(to right, #afcadf, #d7afdf);
     display: flex;
     align-items: center;
 }
@@ -61,6 +61,7 @@ a{
 h1 {
     margin-left: 10px;
     font-family: Arial, Helvetica, sans-serif;
+    color: black;
 }
 
 p {
