--- a/styles/style.css
+++ b/styles/style.css
@@ -18,6 +18,11 @@ body {
     align-items: center;
 }
 
+#botaodark{
+    border-radius: 10px;
+    border-width: 1px;
+}
+
 a{
     text-decoration: none;
     color: black;
